--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh" translatable = "false"><b>Refresh</b></string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_setting">Setting</string>
+    <string name="pref_location_label">Location</string>
+    <string name="pref_location_key">location</string>
+    <string name="pref_location_default">94043</string>
 </resources>
